--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -139,7 +139,6 @@ Longhouse = Dlouhý dům
 +1 Production from each worked Forest tile = +1 Produkce za každého dělníka na políčku s lesem
 
 Forge = Kovárna
- # Requires translation!
 +15% production of land units = +15% produkce pozemních jednotek
 
 Harbor = Přístav
@@ -303,21 +302,13 @@ Requires a [buildingName] in this city = Vyžaduje: [buildingName] v tomto měst
 Requires [resource] = Vyžaduje surovinu [resource]
 Required tech: [requiredTech] = Vyžaduje technologii: [requiredTech]
 
- # Requires translation!
 Current construction = Současná produkce
- # Requires translation!
 Construction queue = Fronta produkce
- # Requires translation!
 Pick a construction = Zvolit produkci
- # Requires translation!
 Queue empty = Fronta je prázdná
- # Requires translation!
 Add to queue = Přidat do fronty
- # Requires translation!
 Remove from queue = Odebrat z fronty
- # Requires translation!
 Show stats drilldown = Zobrazit statistiky
- # Requires translation!
 Show construction queue = Zobrazit produkci
 
 Diplomacy = Diplomacie
@@ -329,7 +320,6 @@ Declare war on [civName]? = Vyhlásit válku civilizaci [civName]?
 [leaderName] of [nation] = [leaderName], [nation]
 You'll pay for this! = Za tohle zaplatite!
 Negotiate Peace = Mírové jednání
- # Requires translation!
 Peace with [civName]? = Mír s civilizací [civName]?
 Very well. = Výborně.
 Farewell. = Sbohem.
@@ -346,13 +336,9 @@ Indeed! = Vskutku!
 Denounce ([numberOfTurns] turns) = Odsoudit ([numberOfTurns] kol)
 We will remember this. = To vám nikdy nezapomeneme.
 
- # Requires translation!
 [civName] has declared war on [targetCivName]! = Civilizace [civName] vyhlásila válku civilizaci [targetCivName]!
- # Requires translation!
 [civName] and [targetCivName] have signed the Peace Treaty! = Civilizace [civName] and [targetCivName] podepsaly Mírovou Dohodu!
- # Requires translation!
 [civName] and [targetCivName] have signed the Declaration of Friendship! = Civilizace [civName] and [targetCivName] podepsaly Deklaraci Přátelství!
- # Requires translation!
 [civName] has denounced [targetCivName]! =  Civilizace [civName] odsoudila civilizaci [targetCivName]!
 
 Unforgivable = Nenávist
@@ -573,11 +559,8 @@ Songhai = Songhajská říše
 Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Získává trojnásobek zlata z Barbarských táborů a drancování měst. Jednotky při naloďování se můžou bránit.
 
- # Requires translation!
 Spain = Španělsko
- # Requires translation!
 Isabella = Izabela
- # Requires translation!
 100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = 100 Zlata za objev Přírodního Divu (500 Zlata jde-li o prvního objevitele). Kultura, Spokojenost a zisky z políček Přírodních Divů jsou dvojnásobné.
 
 # New game screen
@@ -686,7 +669,6 @@ Are you sure you want to delete this map? = Jste si jistý(á), že chcete smaza
 Upload map = Nahrát mapu
 Could not upload map! = Nelze nahrát mapu!
 Map uploaded successfully! = Mapa úspěšně nahrána!
- # Requires translation!
 Saving... = Ukládám...
 
 # Options
@@ -784,19 +766,12 @@ One of our trades with [nation] has been cut short = Jedna z našich obchodních
 [nation] refused to stop settling cities near us! = Národ [nation] vypověděl dohodu o nebudování měst poblíž našich hranic!
 We have allied with [nation]. = Uzavřeli jsme alianci s civilizací [nation].
 We have lost alliance with [nation]. = Ztratili jsme alianci s civilizací [nation].
- # Requires translation!
 We have discovered [naturalWonder]! = Objevili jsme [naturalWonder]!
- # Requires translation!
 We have received [goldAmount] Gold for discovering [naturalWonder] = Získali jsme [goldAmount] Zlata za objevení [naturalWonder]
- # Requires translation!
 Your relationship with [cityStateName] is about to degrade = Vaše vztahy s [cityStateName] se zhoršují
- # Requires translation!
 Your relationship with [cityStateName] degraded = Vaše vztahy s [cityStateName] se zhoršily
- # Requires translation!
 A new barbarian encampment has spawned! = Objeven nový tábor barbarů!
- # Requires translation!
 Received [goldAmount] Gold for capturing [cityName] = Získali jsme [goldAmount] Zlata při obsazení [cityName]
- # Requires translation!
 Our proposed trade request is no longer relevant! = Naše obchodní nabídka již není relevantni!
 
 # World Screen UI
@@ -859,7 +834,6 @@ Victory status = Cesta k vítězství
 Social policies = Sociální politika
 Community = Komunita
 Close = Zavřít
- # Requires translation!
 Do you want to exit the game? = Chcete ukončit hru?
 
 # City screen
@@ -884,6 +858,16 @@ Annex city = Anektovat město
 Specialist Buildings = Specializované budovy
 Specialist Allocation = Přidělit specialistu
 Specialists = Specialisté
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Spotřeba jídla
 Growth bonus = Spotřeba jídla
 Unassigned population = Nezaměstnaní obyvatelé
@@ -943,7 +927,6 @@ Your trade mission to [civName] has earned you [goldAmount] gold and [influenceA
 Hurry Wonder = Uspíšit stavbu Divu
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Naši občané jsou spokojeni s vaší vládou po dlouhou dobu díky čemuž říše vstoupila do Zlatého věku!
 You have entered the [newEra]! = Vstoupili jsme do éry [newEra]!
- # Requires translation!
 [civName] has entered the [eraName]! = Civilizace [civName] vstoupila do éry [eraName]!
 [policyBranch] policy branch unlocked! = Zpřístupněna větev sociální politiky: [policyBranch]
 Overview = Přehled
@@ -972,7 +955,6 @@ Closest city = Nejbližší město
 Action = Činnost
 Defeated = Poražený(á)
 Tiles = Políčka
- # Requires translation!
 Natural Wonders = Přírodní Divy
  # Requires translation!
 Treasury deficit = 
@@ -1109,7 +1091,6 @@ Victory Types =
 Workers = 
 
 # Other civilopedia things
- # Requires translation!
 Nations = Národy
 Promotions = Povýšení
  # Requires translation!
@@ -1443,12 +1424,10 @@ Grand Mesa = Velká náhorní plošina
 Great Barrier Reef = Velký bariérový útes
 Krakatoa = Krakatoa
 Mount Fuji = Hora Fuji
- # Requires translation!
 Old Faithful = Old Faithful gejzír
 Rock of Gibraltar = Gibraltarské skály
  # Requires translation!
 Cerro de Potosi = 
- # Requires translation!
 El Dorado = El Dorado
 Fountain of Youth = Fontána mládí
 
@@ -1592,7 +1571,6 @@ Pikeman = Pikenýr
 Landsknecht = Landsknecht
 Knight = Rytíř
 Camel Archer = Lučištník na velbloudu
- # Requires translation!
 Conquistador = Konkistador
  # Requires translation!
 Mandekalu Cavalry = 
@@ -1604,7 +1582,6 @@ Combat very likely to create Great Generals = Má velkou šanci získat Velkého
 Caravel = Karavela
 Turtle Ship = Želví loď
 +1 Visibility Range = +1 dohled
- # Requires translation!
 +2 Visibility Range = +2 dohled
 Cannon = Dělo
 Musketman = Střelec s mušketou
