--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -189,7 +189,7 @@ Longhouse =
 +1 Production from each worked Forest tile = 
 
  # Requires translation!
-Forge =
+Forge = 
  # Requires translation!
 +15% production of land units = 
 
@@ -1323,6 +1323,16 @@ Specialist Buildings =
 Specialist Allocation = Specialistische toewijzing
  # Requires translation!
 Specialists = 
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
  # Requires translation!
 Food eaten = 
  # Requires translation!
