--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -824,6 +824,16 @@ Annex city = Cité annexée
 Specialist Buildings = Batiments spéciaux
 Specialist Allocation = Affectation Spécialiste
 Specialists = Spécialiste
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Nourriture consommée
 Growth bonus = Bonus de Croissance
 Unassigned population = Population libre
