--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -878,6 +878,16 @@ Annex city = Stadt annektieren
 Specialist Buildings = Gebäude der SpezialistInnen
 Specialist Allocation = Zuordnung von SpezialistInnen
 Specialists = SpezialistInnen
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Nahrung verbraucht
 Growth bonus = Wachstumsbonus
 Unassigned population = Freie Bevölkerung
