--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -821,6 +821,16 @@ Annex city = Annetti città
 Specialist Buildings = Edifici specialisti
 Specialist Allocation = Assegna specialisti
 Specialists = Specialisti
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Cibo consumato
 Growth bonus = Bonus crescita
 Unassigned population = Popolazione libera
@@ -1490,7 +1500,6 @@ Logistics = Logistica
 Trebuchet = Trabocco
 Hwach'a = Hwach'a
 Limited Visibility = Visibilità limitata
-Keshik = Keshik
 Longswordsman = Guerriero con spada lunga
 Pikeman = Picchiere
 Landsknecht = Lanzichenecco
@@ -1578,7 +1587,6 @@ Can speed up construction of a wonder = Può accelerare la costruzione di una Me
 Can build improvement: Manufactory = Può costruire il miglioramento: Manifattura
 Great General = Grande Generale
 Bonus for units in 2 tile radius 15% = 15% Bonus per le unità nel raggio di 2 caselle
-Khan = Khan
 
 # Promotions
 
