--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -906,6 +906,16 @@ Annex city = 도시 합병
 Specialist Buildings = 전문가 건물
 Specialist Allocation = 전문가 할당
 Specialists = 전문가
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = 식량 소모
 Growth bonus = 성장률
 Unassigned population = 실업자 수
