--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -206,7 +206,7 @@ Longhouse =
 +1 Production from each worked Forest tile = 
 
  # Requires translation!
-Forge =
+Forge = 
  # Requires translation!
 +15% production of land units = 
 
@@ -1388,6 +1388,16 @@ Specialist Buildings =
 Specialist Allocation = 
  # Requires translation!
 Specialists = 
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
  # Requires translation!
 Food eaten = 
  # Requires translation!
