--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -976,6 +976,16 @@ Specialist Buildings = Clădiri specializate
 Specialist Allocation = Alocarea specialiștilor
 Specialists = Specialiști
  # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
+ # Requires translation!
 Food eaten = 
 Growth bonus = Bonus de creștere
 Unassigned population = Populație liberă
