--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -825,6 +825,16 @@ Annex city = Захватить город
 Specialist Buildings = Специальные здания
 Specialist Allocation = Распределение специалистов
 Specialists = Специалисты
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Потребление еды
 Growth bonus = Бонус к росту
 Unassigned population = Свободное население
