--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -828,6 +828,16 @@ Annex city = 吞并城市
 Specialist Buildings = 专业建筑
 Specialist Allocation = 专业人员分配
 Specialists = 专业人员
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = 人口消耗
 Growth bonus = 积累速率
 Unassigned population = 闲置人口
