--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -855,6 +855,16 @@ Annex city = Anexionar ciudad
 Specialist Buildings = Edificios Ocupables
 Specialist Allocation = Asignación de especialistas
 Specialists = Especialistas
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Comida consumida
 Growth bonus = Bonus de crecimiento
 Unassigned population = Población libre
