--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -821,6 +821,16 @@ Annex city = Şehiri ilhak et
 Specialist Buildings = Uzmanların Binaları
 Specialist Allocation = Uzman Tahsisi
 Specialists = Uzmanlar
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Yenen yiyecekler
 Growth bonus = Büyüme bonusu
 Unassigned population = Atanmamış nüfus
