--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -823,6 +823,16 @@ Annex city = Анексувати місто
 Specialist Buildings = Спеціалізовані будівлі
 Specialist Allocation = Розподіл спеціалістів
 Specialists = Спеціалісти
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Їжі з’їдено
 Growth bonus = Бонус до зростання
 Unassigned population = Незайняте населення
