--- a/android/assets/jsons/translationsByLanguage/Indonesian.properties
+++ b/android/assets/jsons/translationsByLanguage/Indonesian.properties
@@ -885,6 +885,16 @@ Annex city = Mencaplok kota
 Specialist Buildings = Spesialis Bangunan
 Specialist Allocation = Spesialis Alokasi
 Specialists = Spesialis
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Makanan termakan
 Growth bonus = Bonus pertumbuhan
 Unassigned population = populasi tak terkelola
