--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -927,6 +927,16 @@ Annex city = Anexar cidade
 Specialist Buildings = Construções especializadas
 Specialist Allocation = Alocação de Especialistas
 Specialists = Especialistas
+ # Requires translation!
+[specialist] slots = 
+ # Requires translation!
+Engineer specialist = 
+ # Requires translation!
+Merchant specialist = 
+ # Requires translation!
+Scientist specialist = 
+ # Requires translation!
+Artist specialist = 
 Food eaten = Comida consumida
 Growth bonus = Bônus de crescimento
 Unassigned population = População livre
