--- a/android/assets/jsons/translationsByLanguage/Turkish.properties
+++ b/android/assets/jsons/translationsByLanguage/Turkish.properties
@@ -821,16 +821,11 @@ Annex city = Şehiri ilhak et
 Specialist Buildings = Uzmanların Binaları
 Specialist Allocation = Uzman Tahsisi
 Specialists = Uzmanlar
- # Requires translation!
-[specialist] slots = 
- # Requires translation!
-Engineer specialist = 
- # Requires translation!
-Merchant specialist = 
- # Requires translation!
-Scientist specialist = 
- # Requires translation!
-Artist specialist = 
+[specialist] slots = [specialist] yuvaları
+Engineer specialist = Mühendis uzman
+Merchant specialist = Satıcı uzman
+Scientist specialist = Bilim insanı uzman
+Artist specialist = Sanatçı uzman
 Food eaten = Yenen yiyecekler
 Growth bonus = Büyüme bonusu
 Unassigned population = Atanmamış nüfus
