Improved translations for Ukrainian and russian languages

--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -168,7 +168,7 @@ Opera House = Оперний театр
 
 Sistine Chapel = Сікстинська капела
 'I live and love in God's peculiar light.' - Michelangelo Buonarroti = «Живу і кохаю під особливим божим осяянням» — Мікеланджело Буонарроті
-Culture in all cities increased by 25% = +25 культури в усіх містах
+Culture in all cities increased by 25% = +25% культури в усіх містах
 
 Bank = Банк
 Hanse = Ганза
@@ -290,7 +290,7 @@ Requires [buildingName] to be built in the city = У місті має бути 
 Requires [buildingName] to be built in all cities = В усіх містах має бути будівля: [buildingName]
 Provides a free [buildingName] in the city = Безкоштовно надає місту будівлю: [buildingName]
 Requires worked [resource] near city = Біля міста має бути робочий ресурс: [resource]
-Wonder is being built elsewhere = Диво будується за тридевʼять земель
+Wonder is being built elsewhere = Диво будується у іншому місті
 Requires a [buildingName] in all cities = В усіх містах має бути будівля: [buildingName]
 Requires a [buildingName] in this city = У місті має бути будівля: [buildingName]
 Requires [resource] = Потрібен ресурс: [resource]
@@ -875,7 +875,7 @@ City health = Здоров’я міста
 Occupied! = Окуповано!
 Attack = Атака
 Bombard = Обстрілювати
-NUKE = Ядерна зброя
+NUKE = Ядерний удар
 Captured! = Захоплено!
 defence vs ranged = захист проти дальнобійників
 [percentage] to unit defence = [percentage] до захисту підрозділу
@@ -1218,7 +1218,7 @@ Physics = Фізика
 Metal Casting = Виливок
 'When pieces of bronze or gold or iron break, the metal-smith welds them together again in the fire, and the bond is established.' - Sri Guru Granth Sahib = «Коли шматки бронзи, золота чи заліза розриваються, коваль знову зварює їх у вогні, і зʼєднання відновлюється.» — Шрі Ґуру Ґрант Сахіб
 Steel = Сталь
-'John Henry said to his Captain, / 'A man ain't nothin' but a man, / And before I'll let your steam drill beat me down, / I'll die with the hammer in my hand.'' - Anonymous: The Ballad of John Henry, the Steel-Drivin' Man = «Джон Генрі сказав своєму капітану: «Людина усього лиш людина, / і перш ніж я дозволю вашому паровому свердлу подолати мене, / я помру з молотком у руці.»» — Анонім: Балада про Джона Генрі, чоловіка зі сталі
+'John Henry said to his Captain, / 'A man ain't nothin' but a man, / And before I'll let your steam drill beat me down, / I'll die with the hammer in my hand.'' - Anonymous: The Ballad of John Henry, the Steel-Drivin' Man = «Джон Генрі сказав своєму капітану: «Людина усього лиш людина, і перш ніж я дозволю вашому паровому свердлу подолати мене, я помру з молотком у руці.»» — Анонім: Балада про Джона Генрі, чоловіка зі сталі
 Compass = Компас
 'I find the great thing in this world is not so much where we stand, as in what direction we are moving.' - Oliver Wendell Holmes = «Я вважаю, що видатних речей в цьому світі небагато там, де ми стоїмо, а більше в напрямку, до якого ми рухаємося.» — Олівер Венделл Голмс
 Education = Освіта
@@ -1323,7 +1323,7 @@ Who knows what the future holds? = Хто знає, що ховає майбут
 Improves movement speed on roads = Підвищує швидкість руху дорогами
 Enables conversion of city production to science = Дозволяє конвертувати виробництво міста в науку
 Enables Research agreements = Вмикає угоди про дослідження
-Enables conversion of city production to gold = Дозволяє конвертувати виробнитво міста в золото
+Enables conversion of city production to gold = Дозволяє конвертувати виробництво міста в золото
 Enables embarkation for land units = Дозволяє посадку на судно наземним підрозділам
 Enables embarked units to enter ocean tiles = Дозволяє підрозділам на борту потрапляти до океанських клітинок
 Increases embarked movement +1 = Рух підрозділів на борту +1 
@@ -1681,22 +1681,22 @@ Bonus when intercepting [amount]% = При перехопленні отриму
 Ambush I = Засідка I
 Ambush II = Засідка II
  # Requires translation!
-Armor Plating I = 
+Armor Plating I = Броня I
  # Requires translation!
-Armor Plating II = 
+Armor Plating II = Броня II
  # Requires translation!
-Armor Plating III = 
+Armor Plating III = Броня III
  # Requires translation!
-+25% Combat Bonus when defending = 
++25% Combat Bonus when defending = +25% при захисті
  # Requires translation!
-Flight Deck I = 
+Flight Deck I = Льотна палуба I
  # Requires translation!
-Flight Deck II = 
+Flight Deck II = Льотна палуба II
  # Requires translation!
-Flight Deck III = 
+Flight Deck III = Льотна палуба III
  # Requires translation!
-Can carry 1 extra air unit = 
-Can carry 2 aircraft = Може нести 2 літальні апарати
+Can carry 1 extra air unit = Може нести на 1 літак більше
+Can carry 2 aircraft = Може нести 2 літаки
 Haka War Dance = Бойовий танець Гака
 -10% combat strength for adjacent enemy units = Сусідні ворожі підрозділи отримують силу атаки -10%
 Rejuvenation = Омолодження
