--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -32,24 +32,26 @@ Stone Works = 石工所
 Must not be on plains = 平原には建設できません
 
 Stonehenge = ストーンヘンジ
-'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 
+'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 「時間は、物事を砕く。すべては時間の力のもとに成長し、時間の経過とともに忘れ去られる。」-アリストテレス
 
-Library = 
-+1 Science Per 2 Population = 
-Paper Maker = 
+Library = 図書館
++1 Science Per 2 Population = 人口2人ごとに+1科学
+Paper Maker = 製紙工場
 
-The Great Library = 
-Free Technology = 
-'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 
+The Great Library = アレクサンドリア図書館
+Free Technology = テクノロジーを無償で1つ獲得
+'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 「図書館とは、古の聖人たちの遺産や美徳に満ちた神殿のごときものである。そしてそこには、曲学阿世とは無縁のものがすべて収められ、静かに佇んでいる。」
+- サー・フランシス・ベーコン
 
-Circus = 
-Walls = 
-Walls of Babylon = 
+Circus = サーカス
+Walls = 防壁
+Walls of Babylon = バビロニアの城壁
 
-The Pyramids = 
-'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 
-Worker construction increased 25% = 
-Provides 2 free workers = 
+The Pyramids = ピラミッド
+'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 「死の苦しみよ、汝から我の肉体を逃れさせたまえ。我は神、テムなり。天空遥かに君臨するものなり。我を守りし力は神々と永久にあるものなり。」
+- サー・アーネスト・ウォリス・バッジ訳『エジプト死者の書』
+Worker construction increased 25% = 地形改善に要するターン-25%
+Provides 2 free workers = 無償で労働者2人を提供
 
 Barracks = 
 Krepost = 
