--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ allprojects {
     version = '1.0.1'
     ext {
         appName = "Unciv"
+        appCodeNumber = 369
+        appVersion = "3.5.7"
+
         gdxVersion = '1.9.10'
         roboVMVersion = '2.3.1'
         box2DLightsVersion = '1.4'
