--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -32,7 +32,7 @@ Stone Works = 石工所
 Must not be on plains = 平原には建設できません
 
 Stonehenge = ストーンヘンジ
-'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 「時間は、物事を砕く。すべては時間の力のもとに成長し、時間の経過とともに忘れ去られる。」-アリストテレス
+'Time crumbles things everything grows old and is forgotten under the power of time' - Aristotle = 「時間は、物事を砕く。すべては時間の力のもとに成長し、時間の経過とともに忘れ去られる。」-アリストテレス
 
 Library = 図書館
 +1 Science Per 2 Population = 人口2人ごとに+1科学
