--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -32,7 +32,7 @@ Stone Works = 石工所
 Must not be on plains = 平原には建設できません
 
 Stonehenge = ストーンヘンジ
-'Time crumbles things everything grows old and is forgotten under the power of time' - Aristotle = 「時間は、物事を砕く。すべては時間の力のもとに成長し、時間の経過とともに忘れ去られる。」-アリストテレス
+'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 「時間は、物事を砕く。すべては時間の力のもとに成長し、時間の経過とともに忘れ去られる。」-アリストテレス
 
 Library = 図書館
 +1 Science Per 2 Population = 人口2人ごとに+1科学
@@ -53,13 +53,14 @@ The Pyramids = ピラミッド
 Worker construction increased 25% = 地形改善に要するターン-25%
 Provides 2 free workers = 無償で労働者2人を提供
 
-Barracks = 
-Krepost = 
-Culture and Gold costs of acquiring new tiles reduced by 25% in this city = 
+Barracks = 兵舎
+Krepost = クレポスト
+Culture and Gold costs of acquiring new tiles reduced by 25% in this city = タイル獲得のための文化とゴールド-25%
 
-Colossus = 
-'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 
-+1 gold from worked water tiles in city = 
+Colossus = ロードス島の巨神像
+'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 「いいか、あの男は狭い世界に、まるで巨神像のようにまたがっている。われわれ卑小な人間は、あの男の大きな股の下をくぐって、不名誉な墓を探しまわっているのだ。」
+- ウィリアム・シェイクスピア:ジュリアス・シーザー
++1 gold from worked water tiles in city = 水のタイルに+1ゴールド
 
 Temple = 
 Burial Tomb = 
