--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -3,7 +3,7 @@
 
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = ユニットを移動させる\nユニットをクリック>移動先をクリック>矢印ポップアップをクリック
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 都市を建設\n開拓者(旗ユニット)を選択>「都市を建設」(左下隅)をクリック
-Enter the city screen!\nClick the city button twice = 都市画面を開く\n都市ボタンを2回クリック
+Enter the city screen!\nClick the city button twice = 都市メニューを開く\n都市ボタンを2回クリック
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 研究する技術を選択\n技術ボタンをクリック(左上の緑色> \ n技術を選択>「研究」をクリックします（右下）カ
 Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
@@ -375,30 +375,30 @@ We noticed your new city near our borders, despite your promise. This will have.
 
 # City states
 
-Manila = 
-Kuala Lumpur = 
-Helsinki = 
-Quebec City = 
-Hanoi = 
-Kathmandu = 
-Cape Town = 
-Sydney = 
-Zanzibar = 
-Singapore = 
-Edinburgh = 
-Almaty = 
-Sidon = 
-Kabul = 
-Brussels = 
-Venice = 
-Genoa = 
-Ur = 
-Tyre = 
-Dublin = 
-Antwerp = 
-Rio de Janeiro = 
-Florence = 
-Milan = 
+Manila = マニラ
+Kuala Lumpur = クアラルンプール
+Helsinki = ヘルシンキ
+Quebec City = ケベック州
+Hanoi = ハノイ
+Kathmandu = カトマンズ
+Cape Town = ケープタウン
+Sydney = シドニー
+Zanzibar = ザンジバル
+Singapore = シンガポール
+Edinburgh = エディンバラ
+Almaty = アルマトイ
+Sidon = シドン
+Kabul = カブール
+Brussels = ブリュッセル
+Venice = ヴェネツィア
+Genoa = ジェノヴァ
+Ur = ウル
+Tyre = ティルス
+Dublin = ダブリン
+Antwerp = アントワープ
+Rio de Janeiro = リオデジャネイロ
+Florence = フィレンツェ
+Milan = ミラノ
 
 Provides [amountOfCulture] culture at 30 Influence = 
 Provides 3 food in capital and 1 food in other cities at 30 Influence = 
