--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -40,16 +40,14 @@ Paper Maker = 製紙工場
 
 The Great Library = アレクサンドリア図書館
 Free Technology = テクノロジーを無償で1つ獲得
-'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 「図書館とは、古の聖人たちの遺産や美徳に満ちた神殿のごときものである。そしてそこには、曲学阿世とは無縁のものがすべて収められ、静かに佇んでいる。」
-- サー・フランシス・ベーコン
+'Libraries are as the shrine where all the relics of the ancient saints, full of true virtue, and all that without delusion or imposture are preserved and reposed.' - Sir Francis Bacon = 「図書館とは、古の聖人たちの遺産や美徳に満ちた神殿のごときものである。そしてそこには、曲学阿世とは無縁のものがすべて収められ、静かに佇んでいる。」- サー・フランシス・ベーコン
 
 Circus = サーカス
 Walls = 防壁
 Walls of Babylon = バビロニアの城壁
 
 The Pyramids = ピラミッド
-'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 「死の苦しみよ、汝から我の肉体を逃れさせたまえ。我は神、テムなり。天空遥かに君臨するものなり。我を守りし力は神々と永久にあるものなり。」
-- サー・アーネスト・ウォリス・バッジ訳『エジプト死者の書』
+'O, let not the pains of death which come upon thee enter into my body. I am the god Tem, and I am the foremost part of the sky, and the power which protecteth me is that which is with all the gods forever.'  - The Book of the Dead, translated by Sir Ernest Alfred Wallis Budge = 「死の苦しみよ、汝から我の肉体を逃れさせたまえ。我は神、テムなり。天空遥かに君臨するものなり。我を守りし力は神々と永久にあるものなり。」- サー・アーネスト・ウォリス・バッジ訳『エジプト死者の書』
 Worker construction increased 25% = 地形改善に要するターン-25%
 Provides 2 free workers = 無償で労働者2人を提供
 
@@ -58,18 +56,17 @@ Krepost = クレポスト
 Culture and Gold costs of acquiring new tiles reduced by 25% in this city = タイル獲得のための文化とゴールド-25%
 
 Colossus = ロードス島の巨神像
-'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 「いいか、あの男は狭い世界に、まるで巨神像のようにまたがっている。われわれ卑小な人間は、あの男の大きな股の下をくぐって、不名誉な墓を探しまわっているのだ。」
-- ウィリアム・シェイクスピア:ジュリアス・シーザー
+'Why man, he doth bestride the narrow world like a colossus, and we petty men walk under his huge legs, and peep about to find ourselves dishonorable graves.' - William Shakespeare, Julius Caesar = 「いいか、あの男は狭い世界に、まるで巨神像のようにまたがっている。われわれ卑小な人間は、あの男の大きな股の下をくぐって、不名誉な墓を探しまわっているのだ。」- ウィリアム・シェイクスピア:ジュリアス・シーザー
 +1 gold from worked water tiles in city = 水のタイルに+1ゴールド
 
-Temple = 
-Burial Tomb = 
-Doubles Gold given to enemy if city is captured = 
-Mud Pyramid Mosque = 
+Temple = 寺院
+Burial Tomb = 陵墓
+Doubles Gold given to enemy if city is captured = 都市を占領した文明がゴールドを2倍得る
+Mud Pyramid Mosque = 泥のピラミッド状モスク
 
-The Oracle = 
-'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 
-Free Social Policy = 
+The Oracle = アポロ神殿
+'The ancient Oracle said that I was the wisest of all the Greeks. It is because I alone, of all the Greeks, know that I know nothing'  - Socrates = 「古の賢者が言うには、私がギリシャで最も賢き者であると。それは私がギリシャで最も孤独だからである。無知の知を知るからである。」- ソクラテス
+Free Social Policy = 社会制度を1つ無償で供給
 
 
 Lighthouse = 
