--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -4,7 +4,7 @@
 Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = ユニットを移動させる\nユニットをクリック>移動先をクリック>矢印ポップアップをクリック
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 都市を建設\n開拓者(旗ユニット)を選択>「都市を建設」(左下隅)をクリック
 Enter the city screen!\nClick the city button twice = 都市メニューを開く\n都市ボタンを2回クリック
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 研究する技術を選択\n技術ボタンをクリック(左上の緑色> \ n技術を選択>「研究」をクリックします（右下）カ
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 研究する技術を選択\n技術ボタンをクリック(左上の緑色> \ n技術を選択>「研究」をクリックします（右下）
 Pick a construction!\nEnter city screen > Click on a unit or building (bottom left side) > \n click 'add to queue' = 
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
@@ -32,7 +32,7 @@ Stone Works = 石工所
 Must not be on plains = 平原には建設できません
 
 Stonehenge = ストーンヘンジ
-'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 「時間は、物事を砕く。すべては時間の力のもとに成長し、時間の経過とともに忘れ去られる。」-アリストテレス
+'Time crumbles things; everything grows old and is forgotten under the power of time' - Aristotle = 「時間は、物事を砕く。すべては時間の力のもとに成長し、時間の経過とともに忘れ去られる。」- アリストテレス
 
 Library = 図書館
 +1 Science Per 2 Population = 人口2人ごとに+1科学
@@ -69,19 +69,19 @@ The Oracle = アポロ神殿
 Free Social Policy = 社会制度を1つ無償で供給
 
 
-Lighthouse = 
-Can only be built in coastal cities = 
-+1 food from Ocean and Coast tiles = 
+Lighthouse = 灯台
+Can only be built in coastal cities = 沿岸都市のみ建設可能
++1 food from Ocean and Coast tiles = 海岸、海のタイルに食料+1
 
-The Great Lighthouse = 
-'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 
-All military naval units receive +1 movement and +1 sight = 
+The Great Lighthouse = ファロス灯台
+'They that go down to the sea in ships, that do business in great waters; these see the works of the Lord, and his wonders in the deep.' - The Bible, Psalms 107:23-24 = 「彼らは船に乗り海に出て、大海原で事業をなす者となった。彼らは深き海で主の御業を見た。驚くべき主の美業を。」- 旧約聖書詩編 107:23-24
+All military naval units receive +1 movement and +1 sight = 全海軍ユニットに移動+1、視界+1
 
-National College = 
+National College = 国立大学
 
-Chichen Itza = 
-'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam = 
-Golden Age length increases +50% = 
+Chichen Itza = チチェン・イツァ
+'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam =「チチェン・イツァにてカトゥンが確立する。イツァの居はそこに定められるべし。ケツァール鳥と、緑の鳥がやってくるだろう。アー・カンテナルがやってくるだろう。これは神の言葉である。イツァはやってくるだろう。」- チラム・バラムの書
+Golden Age length increases +50% = 黄金時代の期間を50%延長
 
 Courthouse = 
 Remove extra unhappiness from annexed cities = 
