--- a/android/assets/jsons/translationsByLanguage/Japanese.properties
+++ b/android/assets/jsons/translationsByLanguage/Japanese.properties
@@ -83,25 +83,25 @@ Chichen Itza = チチェン・イツァ
 'The katun is established at Chichen Itza. The settlement of the Itza shall take place there. The quetzal shall come, the green bird shall come. Ah Kantenal shall come. It is the word of God. The Itza shall come.'  - The Books of Chilam Balam =「チチェン・イツァにてカトゥンが確立する。イツァの居はそこに定められるべし。ケツァール鳥と、緑の鳥がやってくるだろう。アー・カンテナルがやってくるだろう。これは神の言葉である。イツァはやってくるだろう。」- チラム・バラムの書
 Golden Age length increases +50% = 黄金時代の期間を50%延長
 
-Courthouse = 
-Remove extra unhappiness from annexed cities = 
-Can only be built in annexed cities = 
+Courthouse = 裁判所
+Remove extra unhappiness from annexed cities = 占領による不満度を減少
+Can only be built in annexed cities = 占領された都市のみ建設可能
 
-Stable = 
-+15% Production when building Mounted Units in this city = 
+Stable = 厩舎
++15% Production when building Mounted Units in this city = 騎乗ユニット生産時に生産力+15
 
-Circus Maximus = 
+Circus Maximus = キルクス・マクシムス
 
-Hanging Gardens = 
-'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 
+Hanging Gardens = 空中庭園
+'I think that if ever a mortal heard the word of God it would be in a garden at the cool of the day.'  - F. Frankfort Moore = 「はかなき者が主のお言葉を聞いたなら、晴れの日に麗しき庭園にいるかのごときであろう」- フランクフォート・ムーア
 
-Colosseum = 
+Colosseum = コロシアム
 
 Terracotta Army = 
 'Regard your soldiers as your children, and they will follow you into the deepest valleys; look on them as your own beloved sons, and they will stand by you even unto death.'  - Sun Tzu = 
 
-Market = 
-Bazaar = 
+Market = 市場
+Bazaar = バザー
 Provides 1 extra copy of each improved luxury resource near this City = 
 +2 Gold for each source of Oil and oasis = 
 
